<resources>
    <string name="app_name" translatable="false">Tourism Activation</string>
    <string name="sign_in">Sign In</string>
    <string name="create_an_account">Create an account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="qr">QR</string>
    <string name="favorites">Favorites</string>
    <string name="login">Login</string>
    <string name="forgot_password">forgot password ?</string>
    <string name="there_s_no_favorites">There\'s no Favorites</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="skip">Skip</string>
    <string name="add_place">add place</string>
    <string name="all_categories">All Categories</string>
    <string name="historical">Historical</string>
    <string name="museum">Museum</string>
    <string name="natural">Natural</string>
    <string name="restaurants">Restaurants</string>
    <string name="local">Local</string>
    <string name="shopping">Shopping</string>
    <string name="name">Name</string>
    <string name="name_helper">type your name like Emad</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="profile_settings">profile Settings</string>
    <string name="email_helper">type your email *</string>
    <string name="password_helper">required be more than 8 letters- numbers</string>
    <string name="confirm_password">confirm password</string>
    <string name="setup_your_profile_picture">Setup your profile picture</string>
    <string name="done">Done</string>
    <string name="booking_tickets">Book Tickets</string>
    <string name="place_name">Place Name :</string>
    <string name="date">Date :</string>
    <string name="total">Total</string>
    <string name="price">Price :</string>
    <string name="type">Type :</string>
    <string name="count">Count :</string>
    <string name="max_10">max 10</string>
    <string name="book">book</string>
    <string name="tickets">Tickets</string>
    <string name="next_tickets">Next Tickets</string>
    <string name="expired_tickets">Expired Tickets</string>
    <string name="there_s_no_tickets">There\'s no Tickets</string>
    <string name="discover">Discover</string>
    <string name="description">Description</string>
    <string name="prices">Prices</string>
    <string name="tags">Tags</string>
    <string name="rate_this_place">Rate this place</string>
    <string name="tell_others_what_you_think">Tell others what you think</string>
    <string name="write_your_experience">Write your experience</string>
    <string name="review">review</string>
    <string name="experience">experience</string>
    <string name="quote">“The World is a book, and those who do not travel read only a page.” – Saint Augustine</string>
    <string name="ticket_type">Ticket Type :</string>
    <string name="cost">Cost :</string>
    <string name="logout">Logout</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="languages">Languages</string>
    <string name="wrong_logout">something wrong while logout</string>
    <string name="internet_error">internet error</string>
    <string name="user_error">user error</string>
    <string name="good_morning">Good Morning,</string>
    <string name="good_afternoon">Good Afternoon,</string>
    <string name="good_evening">Good Evening,</string>
    <string name="good_night">Good Night,</string>
    <string name="hello">Hello,</string>
    <string name="passwords_not_same">Passwords is not the same</string>
    <string name="name_is_less_than_3">Name should be more 2 characters</string>
    <string name="email_is_not_valid">\' is not a valid email</string>
    <string name="phone_invalid">Phone number is invalid</string>
    <string name="successfully_registered">You have successfully registered</string>
    <string name="email_already_exists">this Email Already exists</string>
    <string name="wrong_email">wrong Email Address</string>
    <string name="wrong_password">wrong password</string>
    <string name="ERROR">ERROR</string>
    <string name="task_cancelled">Task Cancelled</string>
    <string name="progress_setting_profile">setting up your profile info.</string>
    <string name="progress_profile_uploaded">profile picture has been uploaded</string>
    <string name="progress_profile_setting">setting up your profile info.</string>
    <string name="fault_updating">fault in updating user info</string>
    <string name="uploading">uploading</string>
    <string name="priceType"> LE</string>
    <string name="enable_camera_permission">Enable Camera Permission</string>
    <string name="passwordisTrue">password is True</string>
    <string name="DeletePost">Delete Post</string>
    <string name="DeletePostDialog">Are you sure you want to delete this Post?</string>
    <string name="delete">Delete</string>
    <string name="yesDelete">yes</string>
    <string name="title_choose_image_provider">Choose</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_camera">Camera</string>

    <string name="message_gallery_permission_denied">Read External Storage permission is needed to select Image. Please turn on the requested permission from Settings > Permissions.</string>
    <string name="message_camera_permission_denied">Camera and External Storage permissions are needed to capture the image. Turning off any permission won\'t allow the application to run smoothly. Please turn on all requested permissions from Settings > Permissions.</string>
    <string name="permission_gallery_denied">
        <![CDATA[Storage permission is needed to pick gallery image. Please allow storage permission from Settings > Permissions.]]></string>
    <string name="permission_camera_denied">
        <![CDATA[Camera permission is needed to take a picture. Please allow permission from Settings > Permissions.]]></string>

    <string name="error_failed_to_create_camera_image_file">Failed to create Camera image file</string>
    <string name="error_failed_pick_gallery_image">Failed to pick Gallery image</string>
    <string name="error_failed_to_crop_image">Failed to crop image</string>
    <string name="error_failed_to_compress_image">Failed to compress image</string>
    <string name="error_task_cancelled">Task Cancelled</string>
    <string name="error_camera_app_not_found">Camera app not found</string>

    <!-- uCrop string resource start -->
    <string name="ucrop_label_original">Original</string>
    <string name="ucrop_label_edit_photo">Edit Photo</string>
    <string name="ucrop_menu_crop">Crop</string>
    <string name="ucrop_rotate">Rotate</string>
    <string name="ucrop_scale">Scale</string>
    <string name="ucrop_crop">Crop</string>
    <string name="post">post</string>
    <string name="writeYourExperience">write your experience about Egypt</string>
    <string name="bookingInprocess">booking is in process.</string>
    <string name="BookingDone">Booking done successfully</string>
    <string name="addImage">add Image</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="there_is_no_results">there is no Results</string>
    <string name="all_tags">All Tags</string>
    <string name="categories">Categories</string>
    <string name="searching">Search</string>
    <string name="results">Results</string>
    <string name="Invalid_email_password">Invalid email or password</string>
    <string name="WrongQR">Wrong QR code</string>
    <!-- uCrop string resource end -->


    <string-array name="titles">
        <item>Governorates</item>
        <item>Experiences</item>
        <item>Recommended</item>
    </string-array>

    <string-array name="placeTitles">
        <item>Overview</item>
        <item>Reviews</item>
        <item>Gallery</item>
    </string-array>

    <string-array name="recommendedTitles">
        <item>Overview</item>
        <item>Places</item>
    </string-array>
</resources>