<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".TicketsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ticketsAppbar"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:background="@color/secondaryColor"
        android:fitsSystemWindows="true"
        android:theme="@style/actionBarTheme">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ticketsCollapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/secondaryColor"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:title="@string/tickets">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/ticketsToolbar"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/back_arrow">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@id/ticketsAppbar"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <HorizontalScrollView
                android:id="@+id/ticketsHorizontalScrollView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:scrollbars="none"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/ticketsFilterChipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:checkedChip="@id/nextTicketsChip"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/nextTicketsChip"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:fontFamily="@font/poppins"
                        android:text="@string/next_tickets"
                        android:textColor="@color/secondaryTextColor"
                        app:chipBackgroundColor="@color/chip_state_layout" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/expiredTicketsChip"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/expired_tickets"
                        android:textColor="@color/secondaryTextColor"
                        app:chipBackgroundColor="@color/chip_state_layout" />

                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/noTicketsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/there_s_no_tickets"
                android:textSize="20sp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ticketsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>